objects/ACP_Oppty_TAM_Report__c.object
<CustomObject>
    <description>Hari 7/Aug/17 - Created for Account Plan to store report details for Opportunity VS TAM.</description>
    <fields>
        <fullName>ACP_5YPL_BU_Profit_Center__c</fullName>
        <description>To store BU Profit Center value for DND 5YPL report</description>
        <label>BU Profit Center</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data and Devices</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Confidence2__c</fullName>
        <description>To store 5Y Pipeline Confidence for different filter criteria</description>
        <label>Confidence2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Confidence__c</fullName>
        <description>To store 5Y Pipeline Confidence</description>
        <label>Confidence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_5YPL_DISTRIBUTOR2__c</fullName>
        <description>To store Distributor with an empty value for 5YPL report for Channel BU</description>
        <label>DISTRIBUTOR2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_5YPL_DISTRIBUTOR__c</fullName>
        <description>To store Distributor for 5YPL report for Channel BU</description>
        <label>DISTRIBUTOR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None-Direct Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Date__c</fullName>
        <description>To store 5Y Pipeline Date</description>
        <label>Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Days_since_last_user_update2__c</fullName>
        <description>To store Days since last user update for 5YPL report for Channel BU</description>
        <label>Days since last user update2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Days_since_last_user_update__c</fullName>
        <description>To store number of days since last user update for 5Y Pipeline</description>
        <label>Days since last user update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_5YPL_MED_Portfolio__c</fullName>
        <description>To store MED Portfolio values for 5YPipeline report</description>
        <label>MED Portfolio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Opp_Group__c</fullName>
        <description>To store 5Y Pipeline Opportunity Group</description>
        <label>Opportunity Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>NDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Opp_Record_Type__c</fullName>
        <description>To store Opportunity Record Type for 5Y Pipeline report[this field Not in Use, created multi picklist as Channel BU has multiple values]</description>
        <label>Opp Rec Ty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project,</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Opportunity_Record_Type2__c</fullName>
        <description>To store opportunity record type for 5YPL report for Channel BU</description>
        <label>Opportunity Record Type2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCR Opportunity</fullName>
                </value>
                <value>
                    <fullName>NDR Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Oppty_Rec_Type__c</fullName>
        <description>To store Opportunity Record Type for 5YPL report</description>
        <label>Opportunity Record Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Phase__c</fullName>
        <description>To store Phase value for 5YPipeline report</description>
        <label>Phase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Lost - Closed</fullName>
                </value>
                <value>
                    <fullName>Dead - Closed</fullName>
                </value>
                <value>
                    <fullName>Lost/Dead - Closed</fullName>
                </value>
                <value>
                    <fullName>Discussion</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Process_Status__c</fullName>
        <description>To store 5Y Pipeline Process Status</description>
        <label>Process Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-prod</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Ramp-down</fullName>
                </value>
                <value>
                    <fullName>EOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Type__c</fullName>
        <description>To store 5Y Pipeline Type of Business</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer existing Business</fullName>
                </value>
                <value>
                    <fullName>Defend existing Business</fullName>
                </value>
                <value>
                    <fullName>Stocking Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_5YPL_Won_Date__c</fullName>
        <description>To store 5Y Pipeline Won Date</description>
        <label>Won Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_5YPL_aplActivePL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether it is active for  5Y Pipeline report</description>
        <label>APL Active Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_CBC1__c</fullName>
        <description>To Store CBC1 Code</description>
        <inlineHelpText>Enter CBC 1 Code</inlineHelpText>
        <label>CBC 1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CBC2__c</fullName>
        <description>To Store CBC 2 code</description>
        <inlineHelpText>Enter CBC 2 code</inlineHelpText>
        <label>CBC 2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CBC3__c</fullName>
        <description>To store CBC 3 value</description>
        <inlineHelpText>Enter CBC 3</inlineHelpText>
        <label>CBC 3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CYPL_BU_Profit_Center__c</fullName>
        <description>To store BU Profit Center value for DND CYPL report</description>
        <label>BU Profit Center</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data and Devices</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_CYPL_Confidence2__c</fullName>
        <description>To store CY Pipeline Confidence for different filter criteria</description>
        <label>Confidence2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CYPL_Confidence__c</fullName>
        <description>To store CY Pipeline Confidence</description>
        <label>Confidence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_CYPL_DISTRIBUTOR2__c</fullName>
        <description>To store Distributor with an empty value for CYPL report for Channel BU</description>
        <label>DISTRIBUTOR2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CYPL_DISTRIBUTOR__c</fullName>
        <description>To store Distributor for CYPL report for Channel BU</description>
        <label>DISTRIBUTOR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None-Direct Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_CYPL_Date__c</fullName>
        <description>To store CY Pipeline Date</description>
        <label>Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CYPL_Days_since_last_user_update__c</fullName>
        <description>To store number of days since last user update for CY Pipeline</description>
        <label>Days since last user update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_CYPL_MEDOppStatus__c</fullName>
        <description>To store Med Opp Status of CYPipeline Report</description>
        <label>MED Opp Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P3 - In Quoting Opportunity</fullName>
                </value>
                <value>
                    <fullName>QR - Quote Released</fullName>
                </value>
                <value>
                    <fullName>AC - Active Project</fullName>
                </value>
                <value>
                    <fullName>CM - Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_CYPL_MED_Portfolio__c</fullName>
        <description>To store MED Portfolio values for CYPipeline report</description>
        <label>MED Portfolio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CYPL_Opp_Group__c</fullName>
        <description>To store CY Pipeline Opportunity Group</description>
        <label>Opportunity Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>NDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_CYPL_Opp_Record_Type__c</fullName>
        <description>To store Opportunity Record Type for CY Pipeline report[this field Not in Use, created multi picklist as Channel BU has multiple values]</description>
        <label>Opp Rec Ty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project,</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_CYPL_Oppty_Rec_Type__c</fullName>
        <description>To store Opportunity Record Type for CYPL report</description>
        <label>Opportunity Record Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_CYPL_Phase__c</fullName>
        <description>To store Phase value for CYPipeline report</description>
        <label>Phase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Lost - Closed</fullName>
                </value>
                <value>
                    <fullName>Dead - Closed</fullName>
                </value>
                <value>
                    <fullName>Lost/Dead - Closed</fullName>
                </value>
                <value>
                    <fullName>Discussion</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_CYPL_Process_Status__c</fullName>
        <description>To store CY Pipeline Process Status</description>
        <label>Process Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-prod</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Ramp-down</fullName>
                </value>
                <value>
                    <fullName>EOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_CYPL_Type__c</fullName>
        <description>To store CY Pipeline Type of the Business</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer existing Business</fullName>
                </value>
                <value>
                    <fullName>Defend existing Business</fullName>
                </value>
                <value>
                    <fullName>Stocking Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_CYPL_Won_Date__c</fullName>
        <description>To store CY Pipeline Won Date</description>
        <label>Won Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CYPL_aplActivePL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether is is active for CY Pipeline report</description>
        <label>APL Active Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_CY_Pipeline__c</fullName>
        <description>Created for Opportunity Tam Report</description>
        <label>CY Pipeline</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Conv_BU_Profit_Center__c</fullName>
        <description>To store BU Profit Center value for DND Conversion report</description>
        <label>BU Profit Center</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data and Devices</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Conv_Confidence2__c</fullName>
        <description>To store confidence for Conversion report for Channel BU</description>
        <label>Confidence2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Conv_Confidence__c</fullName>
        <description>To store Conversion Confidence</description>
        <label>Confidence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Conv_DISTRIBUTOR2__c</fullName>
        <description>To store Distributor with an empty value for Conversion report for Channel BU</description>
        <label>DISTRIBUTOR2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Conv_DISTRIBUTOR__c</fullName>
        <description>To store Distributor for Conversion report for Channel BU</description>
        <label>DISTRIBUTOR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None-Direct Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Conv_Date__c</fullName>
        <description>To store Date for Conversion report</description>
        <label>Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Conv_Lost_Date__c</fullName>
        <description>To store Lost date for Conversion report</description>
        <label>Lost Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Conv_MEDOppStatus__c</fullName>
        <description>To store Med Opp Status of Conversion Report</description>
        <label>MED Opp Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P3 - In Quoting Opportunity</fullName>
                </value>
                <value>
                    <fullName>QR - Quote Released</fullName>
                </value>
                <value>
                    <fullName>AC - Active Project</fullName>
                </value>
                <value>
                    <fullName>CM - Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Conv_MED_Portfolio__c</fullName>
        <description>To store MED Portfolio values for CYPipeline report</description>
        <label>MED Portfolio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Conv_Opp_Group__c</fullName>
        <description>To store Conversion Opportunity Group</description>
        <label>Opportunity Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>NDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Conv_Opp_Record_Type__c</fullName>
        <description>To store Opportunity Record Type for Conversion report [this field Not in Use, created multi picklist as Channel BU has multiple values]</description>
        <label>Opp Rec Ty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project,</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Conv_Oppty_Rec_Type__c</fullName>
        <description>To store Opportunity Record Type for Conversion report</description>
        <label>Opportunity Record Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Conv_Phase__c</fullName>
        <description>To store phase value for Conversion report</description>
        <label>Phase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Lost - Closed</fullName>
                </value>
                <value>
                    <fullName>Dead - Closed</fullName>
                </value>
                <value>
                    <fullName>Lost/Dead - Closed</fullName>
                </value>
                <value>
                    <fullName>Discussion</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Conv_Process_Status__c</fullName>
        <description>To store Conversion Process Status</description>
        <label>Process Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-prod</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Ramp-down</fullName>
                </value>
                <value>
                    <fullName>EOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Conv_Type__c</fullName>
        <description>To store Conversion Type of the Business</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer existing Business</fullName>
                </value>
                <value>
                    <fullName>Defend existing Business</fullName>
                </value>
                <value>
                    <fullName>Stocking Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Conv_Won_Date__c</fullName>
        <description>To store Conversion Won Date</description>
        <label>Won Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Conversion__c</fullName>
        <description>To Store ACP_Conversion ID</description>
        <inlineHelpText>Enter Conversion Report ID</inlineHelpText>
        <label>Conversion Report</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_GAM__c</fullName>
        <description>To Store GAM Code</description>
        <inlineHelpText>Enter GAM Code</inlineHelpText>
        <label>GAM Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_KAM__c</fullName>
        <description>To Store KAM Code</description>
        <inlineHelpText>Enter KAM Code</inlineHelpText>
        <label>KAM Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_L12_Lost__c</fullName>
        <description>To store L12M Lost Report ID</description>
        <inlineHelpText>Enter L12M Lost Report ID</inlineHelpText>
        <label>L12M Lost</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>